<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    android:layout_margin="8dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageNews"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/news_image"/>

        <TextView
            android:id="@+id/titleNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="4dp"/>

        <TextView
            android:id="@+id/descNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_description"
            android:textSize="14sp"
            android:padding="8dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
